@@ -53,7 +53,8 @@ import org.apache.log4j.Logger;
  *  A generic RSS Feed Item (includes the contents of an RSS feed between the
  *  &lt:item&gt; and &lt;/item&gt; tags).
  *
- *  Copyright (c) 2005 Hewlett-Packard Development Company, L.P.
+ * Copyright (c) 2005 Hewlett-Packard Development Company, L.P.
+ * Licensed under the CruiseControl BSD license
  *  @author Patrick Conant
  */
 public class CruiseControlItem extends Item {
