@@ -47,6 +47,7 @@ import org.jdom.Element;
 
 /*
  * Copyright (c) 2005 Hewlett-Packard Development Company, L.P.
+ * Licensed under the CruiseControl BSD license
  */
 public class CruiseControlItemTest extends TestCase {
 
