@@ -48,6 +48,7 @@ import net.sourceforge.cruisecontrol.util.IO;
 
 /*
  * Copyright (c) 2005 Hewlett-Packard Development Company, L.P.
+ * Licensed under the CruiseControl BSD license
  */
 public class FeedTest extends TestCase {
 
